# ai-models-panguweather

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-publish.yml
ai_models_panguweather/: __init__.py  model.py
src/ai_models_panguweather/: model.py
utils/: pangu-gfs-input.py
